--- a/src/.env.example
+++ b/src/.env.example
@@ -36,7 +36,10 @@ DB_DATABASE=foodmenu
 DB_USERNAME=foodmenu
 DB_PASSWORD=foodmenu
 
-DB_URI=mongodb+srv://foodmenu:FZOZaYTzzhtEsxQ7@cluster0.onj8ivc.mongodb.net/?retryWrites=true&w=majority
+MDB_HOST=mongodb
+MDB_PORT=27017
+MDB_USERNAME=root
+MDB_PASSWORD=example
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
