--- a/Dockerfiles/nginx/default.prod.conf
+++ b/Dockerfiles/nginx/default.prod.conf
@@ -5,12 +5,14 @@ map $http_upgrade $type {
 
 
 server {
-    listen 443 ssl http2; 
-    listen [::]:443 ssl http2;
-    ssl_certificate    /etc/nginx/foodmenu.pem;
-    ssl_certificate_key    /etc/nginx/foodmenu.key;
-    index index.php index.html;
-    server_name  food-menu.net *.food-menu.net;
+    # listen 443 ssl http2; 
+    # listen [::]:443 ssl http2;
+    # ssl_certificate    /etc/nginx/foodmenu.pem;
+    # ssl_certificate_key    /etc/nginx/foodmenu.key;
+    # index index.php index.html;
+    # server_name  food-menu.net *.food-menu.net;
+    listen 8080  http2; 
+    listen [::]:8080  http2;
     root /var/www/foodmenu/public;
 
     location / {
