--- a/Dockerfiles/nginx/default.conf
+++ b/Dockerfiles/nginx/default.conf
@@ -8,7 +8,7 @@ server {
     listen 80  http2; 
     listen [::]:80  http2;
     index index.php index.html;
-    server_name food-menu.test *.food-menu.test;
+    # server_name food-menu.test *.food-menu.test;
     root /var/www/foodmenu/public;
 
     location / {
