--- a/Dockerfiles/nginx/default.conf
+++ b/Dockerfiles/nginx/default.conf
@@ -19,7 +19,7 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
     location @ws {
-        proxy_pass websockets:6001;
+        proxy_pass http://websockets:6001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
