--- a/Dockerfiles/nginx/default.conf
+++ b/Dockerfiles/nginx/default.conf
@@ -5,8 +5,7 @@ map $http_upgrade $type {
 
 
 server {
-    listen 80  http2; 
-    listen [::]:80  http2;
+    listen 80;
     index index.php index.html;
     # server_name food-menu.test *.food-menu.test;
     server_name _;
