--- a/Dockerfiles/nginx/default.conf
+++ b/Dockerfiles/nginx/default.conf
@@ -5,7 +5,8 @@ map $http_upgrade $type {
 
 
 server {
-    listen 80;
+    listen 80  http2; 
+    listen [::]:80  http2;
     index index.php index.html;
     # server_name food-menu.test *.food-menu.test;
     server_name _;
@@ -23,10 +24,10 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
+        # proxy_set_header Host $host;
         proxy_read_timeout     60;
         proxy_connect_timeout  60;
-        proxy_redirect         off;
+        # proxy_redirect         off;
     }
 
     location ~ \.php$ {
