--- a/Dockerfiles/nginx/default.conf
+++ b/Dockerfiles/nginx/default.conf
@@ -24,10 +24,12 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        # proxy_set_header Host $host;
+        proxy_set_header Host $host;
         proxy_read_timeout     60;
         proxy_connect_timeout  60;
-        # proxy_redirect         off;
+        proxy_redirect         off;
+        proxy_cache_bypass $http_upgrade;
+        # proxy_set_header Connection \$connection_upgrade;
     }
 
     location ~ \.php$ {
