--- a/Dockerfiles/nginx/default.conf
+++ b/Dockerfiles/nginx/default.conf
@@ -3,14 +3,18 @@ map $http_upgrade $type {
   websocket "ws";
 }
 
-
 server {
-    listen 80  http2; 
-    listen [::]:80  http2;
-    index index.php index.html;
+    listen 80; 
+    listen [::]:80;
     # server_name food-menu.test *.food-menu.test;
     server_name _;
     root /var/www/foodmenu/public;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+
+    index index.php;
+ 
+    charset utf-8;
 
     location / {
         try_files /nonexistent @$type;
@@ -19,6 +23,12 @@ server {
     location @web {
         try_files $uri $uri/ /index.php?$query_string;
     }
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    error_page 404 /index.php;
+
     location @ws {
         proxy_pass http://websockets:6001;
         proxy_http_version 1.1;
@@ -29,16 +39,22 @@ server {
         proxy_connect_timeout  60;
         proxy_redirect         off;
         proxy_cache_bypass $http_upgrade;
-        # proxy_set_header Connection \$connection_upgrade;
+        #proxy_set_header Connection \$connection_upgrade;
     }
 
     location ~ \.php$ {
+        fastcgi_pass php:9000;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        include fastcgi_params;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location ~ /\.(?!well-known).* {
+        deny all;
     }
 }
