--- a/Dockerfiles/nginx/default.prod.conf
+++ b/Dockerfiles/nginx/default.prod.conf
@@ -5,12 +5,15 @@ map $http_upgrade $type {
 
 
 server {
-    listen 443  http2; 
-    listen [::]:443  http2;
-    index index.php index.html;
+    listen 443 ssl  http2; 
+    listen [::]:443 ssl  http2;
     ssl_certificate    /etc/nginx/foodmenu.pem;
     ssl_certificate_key    /etc/nginx/foodmenu.key;
+    index index.php index.html;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
     # server_name food-menu.test *.food-menu.test;
+    # server_name _;
     root /var/www/foodmenu/public;
 
     location / {
@@ -19,6 +22,7 @@ server {
   
     location @web {
         try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
     }
     location @ws {
         proxy_pass http://websockets:6001;
@@ -29,6 +33,8 @@ server {
         proxy_read_timeout     60;
         proxy_connect_timeout  60;
         proxy_redirect         off;
+        proxy_cache_bypass $http_upgrade;
+        #proxy_set_header Connection \$connection_upgrade;
     }
 
     location ~ \.php$ {
