--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -60,6 +60,18 @@ services:
       SERVICE_NAME: mysql
     networks:
       - foodmenu
+      
+  phpmyadmin:
+    image: phpmyadmin:5.2.1
+    restart: always
+    ports:
+      - 8080:80
+    depends_on:
+      - mysql
+    environment:
+      - PMA_ARBITRARY=1
+    networks:
+      - foodmenu
 
   mongodb:
     image: mongo:7.0.2
@@ -76,6 +88,22 @@ services:
     networks:
       - foodmenu
 
+  mongo-express:
+    image: mongo-express:1.0.0-18
+    container_name: foodmenu_mongo_express
+    restart: unless-stopped
+    depends_on:
+      - mongodb
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_SERVER: mongodb
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongodb:27017/
+    networks:
+      - foodmenu
+      
   websockets:
     build:
       context: ./Dockerfiles/
