--- a/src/.env.example
+++ b/src/.env.example
@@ -115,3 +115,5 @@ MIX_ADMINISTRATION_URL="${ADMINISTRATION_URL}"
 # MAIL_FROM_ADDRESS="admin@food-menu.net"
 # MAIL_FROM_NAME="Food Menu"
 
+UNSERCONSTRACTION_IP1=
+UNSERCONSTRACTION_IP2=
