--- a/src/.env.example
+++ b/src/.env.example
@@ -23,6 +23,9 @@ BILLING_CENTER_URL=https://billing.food-menu.test
 ADMINISTRATION_DOMAIN=administration.food-menu.test
 ADMINISTRATION_URL=https://administration.food-menu.test
 
+BUILDER_DOMAIN=builder.food-menu.test
+BUILDER_URL=https://builder.food-menu.test
+
 
 DEBUGBAR_ENABLED=false
 
@@ -98,6 +101,8 @@ MIX_BILLING_CENTER_URL="${BILLING_CENTER_URL}"
 MIX_ADMINISTRATION_DOMAIN="${ADMINISTRATION_DOMAIN}"
 MIX_ADMINISTRATION_URL="${ADMINISTRATION_URL}"
 
+MIX_BUILDER_DOMAIN="${BUILDER_DOMAIN}"
+MIX_BUILDER_URL="${BUILDER_URL}"
 
 
 
