--- a/src/public/mix-manifest.json
+++ b/src/public/mix-manifest.json
@@ -11,6 +11,7 @@
     "/js/billing/payment_return_url.js": "/js/billing/payment_return_url.js",
     "/js/cpanel/cpanel.js": "/js/cpanel/cpanel.js",
     "/js/cpanel/login.js": "/js/cpanel/login.js",
+    "/js/builder/builder.js": "/js/builder/builder.js",
     "/js/deliveryAccount/script.js": "/js/deliveryAccount/script.js",
     "/js/deliveryAccount/login.js": "/js/deliveryAccount/login.js",
     "/js/admin/layout.js": "/js/admin/layout.js",
@@ -33,6 +34,7 @@
     "/css/website/notActive.css": "/css/website/notActive.css",
     "/css/admin/layout.css": "/css/admin/layout.css",
     "/css/deliveryAccount/login.css": "/css/deliveryAccount/login.css",
+    "/css/builder/builder.css": "/css/builder/builder.css",
     "/css/cpanel/financialReport.css": "/css/cpanel/financialReport.css",
     "/css/cpanel/login.css": "/css/cpanel/login.css",
     "/css/billing/invoice.css": "/css/billing/invoice.css",
