--- a/Dockerfiles/php.ini
+++ b/Dockerfiles/php.ini
@@ -1,3 +1,11 @@
 upload_max_filesize = 15M
 post_max_size = 16M
-memory_limit = 1024M
+memory_limit = 2048M
+pm = dynamic
+pm.start_servers = 5
+pm.max_children = 15
+pm.min_spare_servers = 5
+pm.max_spare_servers = 10
+pm.max_requests = 500
+php_flag[expose_php] = off
+php_flag[short_open_tag] = on
