--- a/Dockerfiles/nginx/default.prod.conf
+++ b/Dockerfiles/nginx/default.prod.conf
@@ -3,19 +3,20 @@ map $http_upgrade $type {
   websocket "ws";
 }
 
-
 server {
-    listen 443 ssl  http2; 
-    listen [::]:443 ssl  http2;
-    ssl_certificate    /etc/nginx/foodmenu.pem;
-    ssl_certificate_key    /etc/nginx/foodmenu.key;
-    index index.php index.html;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    # server_name food-menu.test *.food-menu.test;
-    # server_name _;
+    listen 443 ssl http2; 
+    listen [::]:443 ssl http2;
+    ssl_certificate    /etc/nginx/keys/foodmenu.pem;
+    ssl_certificate_key    /etc/nginx/keys/foodmenu.key;
+    server_name  food-menu.net *.food-menu.net;
     root /var/www/foodmenu/public;
-    
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+
+    index index.php;
+ 
+    charset utf-8;
+
     client_max_body_size 15M;
 
     location / {
@@ -24,8 +25,12 @@ server {
   
     location @web {
         try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
     }
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    error_page 404 /index.php;
     location @ws {
         proxy_pass http://websockets:6001;
         proxy_http_version 1.1;
@@ -40,12 +45,18 @@ server {
     }
 
     location ~ \.php$ {
+        fastcgi_pass php:9000;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        include fastcgi_params;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location ~ /\.(?!well-known).* {
+        deny all;
     }
 }
