--- a/Dockerfiles/nginx/default.conf
+++ b/Dockerfiles/nginx/default.conf
@@ -17,7 +17,9 @@ server {
     charset utf-8;
 
     client_max_body_size 15M;
-
+	client_body_timeout 1s;
+	client_header_timeout 1s;
+    
     location / {
         try_files /nonexistent @$type;
     }
