--- a/Dockerfiles/nginx/default.prod.conf
+++ b/Dockerfiles/nginx/default.prod.conf
@@ -3,6 +3,8 @@ map $http_upgrade $type {
   websocket "ws";
 }
 
+limit_conn_zone $binary_remote_addr zone=addr:20m;
+
 server {
     listen 443 ssl http2; 
     listen [::]:443 ssl http2;
@@ -47,11 +49,9 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass php:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        include fastcgi_params;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
