--- a/Dockerfiles/php.ini
+++ b/Dockerfiles/php.ini
@@ -9,3 +9,7 @@ pm.max_spare_servers = 10
 pm.max_requests = 500
 php_flag[expose_php] = off
 php_flag[short_open_tag] = on
+
+xdebug.remote_autostart=0  
+xdebug.remote_enable=0
+xdebug.profiler_enable=0
