--- a/Dockerfiles/php.ini
+++ b/Dockerfiles/php.ini
@@ -1,15 +1,19 @@
 upload_max_filesize = 15M
 post_max_size = 16M
 memory_limit = 2048M
-pm = dynamic
-pm.start_servers = 5
-pm.max_children = 15
+
+pm = static
+pm.max_children = 50
+pm.start_servers = 50
 pm.min_spare_servers = 5
 pm.max_spare_servers = 10
 pm.max_requests = 500
-php_flag[expose_php] = off
-php_flag[short_open_tag] = on
 
 xdebug.remote_autostart=0  
 xdebug.remote_enable=0
 xdebug.profiler_enable=0
+
+php_flag[expose_php] = off
+php_flag[short_open_tag] = on
+request_slowlog_timeout = 10
+slowlog = /var/log/php-fpm/slow.$pool.log
