--- a/Dockerfiles/php.ini
+++ b/Dockerfiles/php.ini
@@ -1,19 +1,39 @@
-upload_max_filesize = 15M
-post_max_size = 16M
-memory_limit = 2048M
+; upload_max_filesize = 15M
+; post_max_size = 16M
+; memory_limit = 2048M
 
-pm = static
-pm.max_children = 50
-pm.start_servers = 50
-pm.min_spare_servers = 5
-pm.max_spare_servers = 10
-pm.max_requests = 500
+; pm = static
+; pm.max_children = 50
+; pm.start_servers = 50
+; pm.min_spare_servers = 5
+; pm.max_spare_servers = 10
+; pm.max_requests = 500
 
-xdebug.remote_autostart=0  
-xdebug.remote_enable=0
-xdebug.profiler_enable=0
+; xdebug.remote_autostart=0  
+; xdebug.remote_enable=0
+; xdebug.profiler_enable=0
 
-php_flag[expose_php] = off
-php_flag[short_open_tag] = on
-request_slowlog_timeout = 10
-slowlog = /var/log/php-fpm/slow.$pool.log
+; php_flag[expose_php] = off
+; php_flag[short_open_tag] = on
+; request_slowlog_timeout = 10
+; slowlog = /var/log/php-fpm/slow.$pool.log
+
+
+memory_limit = 256M
+max_execution_time = 60
+zend_extension=opcache.so
+opcache.enable=1
+opcache.enable_cli=1
+opcache.memory_consumption=128
+opcache.interned_strings_buffer=8
+opcache.max_accelerated_files=4000
+opcache.revalidate_freq=2
+opcache.fast_shutdown=1
+error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+log_errors = On
+date.timezone = "UTC"
+upload_max_filesize = 32M
+post_max_size = 32M
+session.save_handler = files
+session.save_path = "/tmp"
+session.cookie_lifetime = 86400
