--- a/Dockerfiles/nginx/default.prod.conf
+++ b/Dockerfiles/nginx/default.prod.conf
@@ -10,7 +10,7 @@ server {
     listen [::]:443 ssl http2;
     ssl_certificate    /etc/nginx/keys/foodmenu.pem;
     ssl_certificate_key    /etc/nginx/keys/foodmenu.key;
-    server_name  food-menu.net *.food-menu.net;
+    # server_name  food-menu.net *.food-menu.net;
     root /var/www/foodmenu/public;
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
