--- a/Dockerfiles/php.ini
+++ b/Dockerfiles/php.ini
@@ -37,3 +37,4 @@ post_max_size = 32M
 session.save_handler = files
 session.save_path = "/tmp"
 session.cookie_lifetime = 86400
+extension=imagick.so
