--- a/src/composer.json
+++ b/src/composer.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-imagick": "*",
         "beyondcode/laravel-websockets": "1.x-dev",
         "fruitcake/laravel-cors": "^2.0",
-        "intervention/image": "^2.6",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.5",
         "mongodb/laravel-mongodb": "^3.9",
