--- a/Dockerfiles/php.ini
+++ b/Dockerfiles/php.ini
@@ -38,3 +38,4 @@ session.save_handler = files
 session.save_path = "/tmp"
 session.cookie_lifetime = 86400
 extension=imagick.so
+extension=mongodb.so
