--- a/src/composer.json
+++ b/src/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "beyondcode/laravel-websockets": "1.x-dev",
         "fruitcake/laravel-cors": "^2.0",
+        "intervention/image-laravel": "^1.2",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.5",
         "mongodb/laravel-mongodb": "^3.9",
