--- a/Dockerfiles/nginx/default.prod.conf
+++ b/Dockerfiles/nginx/default.prod.conf
@@ -3,16 +3,20 @@ map $http_upgrade $type {
   websocket "ws";
 }
 
-limit_conn_zone $binary_remote_addr zone=addr:20m;
+limit_req_zone $binary_remote_addr zone=one:10m rate=5r/s;
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    
+    listen 443 ssl; 
+    listen [::]:443 ssl;
+    http2 on;  # Enable HTTP/2
+
     # Enable SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers HIGH:!aNULL:!MD5;
+
+    ssl_certificate    /etc/nginx/keys/foodmenu.pem;
+    ssl_certificate_key    /etc/nginx/keys/foodmenu.key;
 
     # Dynamic SSL certificate loading using Lua
     ssl_certificate_by_lua_block {
@@ -33,6 +37,7 @@ server {
             local key = assert(ngx.ssl.load_priv_key(ssl_key));  # Load .key file
             assert(ngx.ssl.set_priv_key(key));
         else
+            -- If no SSL certificate is found, fall back to a default self-signed certificate
             ngx.log(ngx.ERR, "Certificate not found for host: " .. ngx.var.host);
             ngx.exit(ngx.HTTP_FORBIDDEN);
         end
