--- a/Dockerfiles/php.ini
+++ b/Dockerfiles/php.ini
@@ -1,42 +1,69 @@
-; upload_max_filesize = 15M
-; post_max_size = 16M
-; memory_limit = 2048M
-
-; pm = static
-; pm.max_children = 50
-; pm.start_servers = 50
-; pm.min_spare_servers = 5
-; pm.max_spare_servers = 10
-; pm.max_requests = 500
-
-; xdebug.remote_autostart=0  
-; xdebug.remote_enable=0
-; xdebug.profiler_enable=0
-
-; php_flag[expose_php] = off
-; php_flag[short_open_tag] = on
-; request_slowlog_timeout = 10
-; slowlog = /var/log/php-fpm/slow.$pool.log
 
 
-memory_limit = 256M
+# memory_limit = 256M
+# max_execution_time = 60
+# zend_extension=opcache.so
+# opcache.enable=1
+# opcache.enable_cli=1
+# opcache.memory_consumption=256
+# opcache.interned_strings_buffer=8
+# opcache.max_accelerated_files=4000
+# opcache.revalidate_freq=2
+# opcache.fast_shutdown=1
+# error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+# log_errors = On
+# date.timezone = "UTC"
+# upload_max_filesize = 32M
+# post_max_size = 32M
+# session.save_handler = files
+# session.save_path = "/tmp"
+# session.cookie_lifetime = 86400
+# extension=imagick.so
+# extension=mongodb.so
+
+; Memory Limit
+memory_limit = 512M  ; Adjust this based on your server resources
+
+; Max execution time for scripts
 max_execution_time = 60
+
+; Max input variables
+max_input_time = 60
+
+; Error Reporting
+error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+log_errors = On
+error_log = /var/log/php_errors.log  ; Ensure this path exists
+
+; File Upload and Post Limits
+upload_max_filesize = 32M
+post_max_size = 32M
+
+; Session settings
+session.save_handler = files
+session.save_path = "/tmp"
+session.gc_maxlifetime = 1440
+session.cookie_lifetime = 86400
+
+; Timezone
+date.timezone = "UTC"
+
+; Enable OPcache for performance
 zend_extension=opcache.so
 opcache.enable=1
 opcache.enable_cli=1
-opcache.memory_consumption=128
-opcache.interned_strings_buffer=8
-opcache.max_accelerated_files=4000
-opcache.revalidate_freq=2
+opcache.memory_consumption=256  ; Adjust based on available memory
+opcache.interned_strings_buffer=16
+opcache.max_accelerated_files=10000  ; Adjust based on your app size
+opcache.revalidate_freq=60  ; Check for file changes every 60 seconds
+opcache.validate_timestamps=1
 opcache.fast_shutdown=1
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
-log_errors = On
-date.timezone = "UTC"
-upload_max_filesize = 32M
-post_max_size = 32M
-session.save_handler = files
-session.save_path = "/tmp"
-session.cookie_lifetime = 86400
+opcache.enable_file_override=1  ; Enable this if you know your files won't change often
+
+; Extensions
 extension=imagick.so
 extension=mongodb.so
-; max_input_vars = 2000
+
+; Realpath cache (helps with file system performance)
+realpath_cache_size = 4096k
+realpath_cache_ttl = 600
