--- a/Dockerfiles/nginx/default.prod.conf
+++ b/Dockerfiles/nginx/default.prod.conf
@@ -15,13 +15,13 @@ server {
     ssl_prefer_server_ciphers on;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
-    ssl_certificate    /etc/nginx/keys/foodmenu.pem;
-    ssl_certificate_key    /etc/nginx/keys/foodmenu.key;
+    ; ssl_certificate    /etc/nginx/keys/foodmenu.pem;
+    ; ssl_certificate_key    /etc/nginx/keys/foodmenu.key;
 
     # Dynamic SSL certificate loading using Lua
     ssl_certificate_by_lua_block {
-        local ssl_cert = "/etc/nginx/ssl/" .. ngx.var.host .. "/origin.pem";  # .pem for cert
-        local ssl_key = "/etc/nginx/ssl/" .. ngx.var.host .. "/origin.key";  # .key for private key
+        local ssl_cert = "/etc/nginx/ssl/" .. ngx.var.host .. "/origin.pem";
+        local ssl_key = "/etc/nginx/ssl/" .. ngx.var.host .. "/origin.key";
 
         -- Function to check if the file exists
         local file_exists = function(path)
@@ -29,20 +29,23 @@ server {
             if f then f:close(); return true else return false end;
         end
 
-        -- Load certificates dynamically based on the host
+        -- Load certificates dynamically based on the host or fall back to default
         if file_exists(ssl_cert) and file_exists(ssl_key) then
             ngx.ssl.clear_certs();
-            local cert = assert(ngx.ssl.load_certificate_chain(ssl_cert));  # Load .pem file
+            local cert = assert(ngx.ssl.load_certificate_chain(ssl_cert));
             assert(ngx.ssl.set_cert(cert));
-            local key = assert(ngx.ssl.load_priv_key(ssl_key));  # Load .key file
+            local key = assert(ngx.ssl.load_priv_key(ssl_key));
             assert(ngx.ssl.set_priv_key(key));
         else
-            -- If no SSL certificate is found, fall back to a default self-signed certificate
-            ngx.log(ngx.ERR, "Certificate not found for host: " .. ngx.var.host);
-            ngx.exit(ngx.HTTP_FORBIDDEN);
+            ngx.log(ngx.ERR, "Certificate not found for host: " .. ngx.var.host .. ". Falling back to default.");
+            ssl_cert = "/etc/nginx/keys/foodmenu.pem";
+            ssl_key = "/etc/nginx/keys/foodmenu.key";
+            local cert = assert(ngx.ssl.load_certificate_chain(ssl_cert));
+            assert(ngx.ssl.set_cert(cert));
+            local key = assert(ngx.ssl.load_priv_key(ssl_key));
+            assert(ngx.ssl.set_priv_key(key));
         end
     }
-
     root /var/www/foodmenu/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
@@ -53,12 +56,13 @@ server {
     charset utf-8;
 
     client_max_body_size 15M;
-    client_body_timeout 1s;
-    client_header_timeout 1s;
+    client_body_timeout 10s;
+    client_header_timeout 10s;
     
     # Serve the Laravel app for HTTPS requests
     location / {
         try_files /nonexistent @$type;
+        limit_req zone=one burst=10 nodelay;
     }
   
     location @web {
