--- a/Dockerfiles/nginx/default.prod.conf
+++ b/Dockerfiles/nginx/default.prod.conf
@@ -1,3 +1,4 @@
+
 map $http_upgrade $type {
   default "web";
   websocket "ws";
@@ -9,40 +10,45 @@ server {
     listen 443 ssl; 
     listen [::]:443 ssl;
     http2 on;  # Enable HTTP/2
-
+    server_name _;
     # Enable SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
-    ; ssl_certificate    /etc/nginx/keys/foodmenu.pem;
-    ; ssl_certificate_key    /etc/nginx/keys/foodmenu.key;
+    ssl_certificate    /etc/nginx/keys/foodmenu.pem;
+    ssl_certificate_key    /etc/nginx/keys/foodmenu.key;
 
-    # Dynamic SSL certificate loading using Lua
     ssl_certificate_by_lua_block {
-        local ssl_cert = "/etc/nginx/ssl/" .. ngx.var.host .. "/origin.pem";
-        local ssl_key = "/etc/nginx/ssl/" .. ngx.var.host .. "/origin.key";
+        local ssl = require "ngx.ssl"
+        local domain = ssl.server_name()
+
+        if not domain then
+            ngx.log(ngx.ERR, "No SNI hostname provided")
+            return
+        end
+
+        -- Normalize the domain by removing 'www.' prefix if present
+        domain = string.gsub(domain, "^www%.", "")
+
+        local ssl_cert = "/var/ssl/" .. domain .. ".pem"
+        local ssl_key = "/var/ssl/" .. domain .. ".key"
 
         -- Function to check if the file exists
         local file_exists = function(path)
-            local f = io.open(path, "r");
-            if f then f:close(); return true else return false end;
+            local f = io.open(path, "r")
+            if f then f:close(); return true else return false end
         end
 
         -- Load certificates dynamically based on the host or fall back to default
         if file_exists(ssl_cert) and file_exists(ssl_key) then
-            ngx.ssl.clear_certs();
-            local cert = assert(ngx.ssl.load_certificate_chain(ssl_cert));
-            assert(ngx.ssl.set_cert(cert));
-            local key = assert(ngx.ssl.load_priv_key(ssl_key));
-            assert(ngx.ssl.set_priv_key(key));
+            ssl.clear_certs()
+            local cert = assert(ssl.load_certificate_chain(ssl_cert))
+            assert(ssl.set_cert(cert))
+            local key = assert(ssl.load_priv_key(ssl_key))
+            assert(ssl.set_priv_key(key))
         else
-            ssl_cert = "/etc/nginx/keys/foodmenu.pem";
-            ssl_key = "/etc/nginx/keys/foodmenu.key";
-            local cert = assert(ngx.ssl.load_certificate_chain(ssl_cert));
-            assert(ngx.ssl.set_cert(cert));
-            local key = assert(ngx.ssl.load_priv_key(ssl_key));
-            assert(ngx.ssl.set_priv_key(key));
+            ngx.log(ngx.INFO, "Using default certificate for domain: ", domain)
         end
     }
     root /var/www/foodmenu/public;
