--- a/Dockerfiles/nginx/default.prod.conf
+++ b/Dockerfiles/nginx/default.prod.conf
@@ -41,8 +41,8 @@ server {
         server_name = server_name:gsub("^www%.", "")
 
         -- Construct paths to the SSL certificate and key
-        local ssl_cert_path = "/var/ssl/" .. server_name .. "/origin.pem"
-        local ssl_key_path  = "/var/ssl/" .. server_name .. "/origin.key"
+        local ssl_cert_path = "/etc/nginx/keys/websites/" .. server_name .. "/origin.pem"
+        local ssl_key_path  = "/etc/nginx/keys/websites/" .. server_name .. "/origin.key"
 
         -- Function to check if a file exists
         local function file_exists(path)
